--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,19 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.classpath
+.project
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
+target/classes/application.properties
+*.class
+target/classes/data.sql
+target/classes/templates/reg.html
+target/classes/META-INF/MANIFEST.MF
+target/classes/META-INF/maven/com.example/springtestjdbc/pom.xml
+target/classes/META-INF/maven/com.example/springtestjdbc/pom.properties
+target/classes/templates/menulist.html
+/target/
+.springBeans
